objects/Student_Assessment__c.object
<CustomObject><fields>
        <fullName>Agreed_Mark__c</fullName>
        <inlineHelpText>Score returned from marking process outside of the SIS</inlineHelpText>
        <label>Agreed Mark</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Agreement_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Denotes that a moderated agreement on mark has been reached</inlineHelpText>
        <label>Agreement Reached</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Anonymous_Ref__c</fullName>
        <formula>Student__r.Anonymous_Ref__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anonymous Ref</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Assessment_Record_ID__c</fullName>
        <description>Hidden field</description>
        <formula>Assessment__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Record ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Assessment_Record_Name__c</fullName>
        <description>Hidden field</description>
        <formula>Assessment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Record Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipLabel>Student Assessments</relationshipLabel>
        <relationshipName>Student_Assessments</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Criticality_Score__c</fullName>
        <description>Hidden field to allow rollup of Pass Critical info at Assessment level to Module</description>
        <label>Criticality Score</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Final_Mark__c</fullName>
        <formula>IF(ISBLANK(Manual_Mark__c),Agreed_Mark__c,Manual_Mark__c)</formula>
        <inlineHelpText>Final unweighted mark taking manual marking into account</inlineHelpText>
        <label>Final Mark</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To denote which Resit/Sit score should not b rolled up to Student Module</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>LSTM_No__c</fullName>
        <description>Hidden - only use for dataloading assessment marks</description>
        <formula>Student__r.LSTM_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LSTM No</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Manual_Mark_Note__c</fullName>
        <description>Required by Validation rule</description>
        <label>Manual Mark Note</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Manual_Mark_Reason__c</fullName>
        <description>If Academic Integrity or Other is chosen will trigger validation rule that requires Manual Mark Note to be populated</description>
        <inlineHelpText>Used to provide reason for manual mark entries</inlineHelpText>
        <label>Manual Mark Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Late Penalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeding Word Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plagiarism Category A: Minor Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plagiarism Category B: Poor Academic Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plagiarism Category C: Plagiarism, Copying, Collusion or Dishonest use of Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plagiarism Category D: Second or Subsequent category C Offence(s) following a Written Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plagiarism Category E: Unfair and/or Dishonest Academic Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Manual_Mark__c</fullName>
        <description>Triggers validation rule that requires population of Manual Mark Reason picklist</description>
        <inlineHelpText>Used if additional manual override (eg for lateness, plagiarism and special circumstances appeals) needs to be applied in SIS, after the marking process outside of the SIS</inlineHelpText>
        <label>Manual Mark</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Manual_Score__c</fullName>
        <description>Used for a variety of Administration stage which alter the raw score for lateness, plagiarism and special circumstances appeals. NB some of these steps may be automated in later dev phases. SE</description>
        <label>Manual Score</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Mark_Resolution__c</fullName>
        <inlineHelpText>Resolution if markers differ</inlineHelpText>
        <label>Mark Resolution</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Marker_1__c</fullName>
        <inlineHelpText>Mark from first marker</inlineHelpText>
        <label>Marker 1</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Marker_2__c</fullName>
        <inlineHelpText>Mark from second marker</inlineHelpText>
        <label>Marker 2</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Mit_Circ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mit Circ</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Mitigating_Circumstances_Notes__c</fullName>
        <label>Mitigating Circumstances Notes</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Mitigating_Circumstances__c</fullName>
        <label>Mitigating Circumstances</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Module_Capped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by Process if there has been a resit with no mitigating circumstances</description>
        <label>Module Capped</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Module__c</fullName>
        <formula>Assessment__r.Module__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Pass_Critical__c</fullName>
        <formula>Text (  Assessment__r.Pass_Critical__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pass Critical?</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Previous_Sitting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to previous sitting of this Student Assessment, if resits are taken</description>
        <label>Previous Sitting</label>
        <referenceTo>Student_Assessment__c</referenceTo>
        <relationshipLabel>Student Assessments (Previous Sitting)</relationshipLabel>
        <relationshipName>Student_Assessments</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Prior_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prior Assessment</label>
        <referenceTo>Student_Assessment__c</referenceTo>
        <relationshipLabel>Resit Assessments</relationshipLabel>
        <relationshipName>Resit_Assessments</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Programme_ID__c</fullName>
        <formula>Student_Module__r.Student_Programme__r.Programme__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Programme ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Reason__c</fullName>
        <description>Used to provide reason for manual score entries</description>
        <label>Reason</label>
        <length>120</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Reportable__c</fullName>
        <formula>IF(ISBLANK(Final_Mark__c),FALSE,TRUE)</formula>
        <inlineHelpText>False unless Final Mark is not blank. Used to exclude Student Assessments from reports calculating Module mark averages when Student Assessments have not been completed</inlineHelpText>
        <label>Reportable</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Resit_Level__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Resit Level</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Sample__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If true denotes that this mark has or will be moderated</inlineHelpText>
        <label>Sample</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sit_Level__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Hidden field</description>
        <label>Sit Level</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Sitting__c</fullName>
        <formula>If ( Previous_Sitting__c = Null, 
   "Sit 1",
   If (  TEXT(Previous_Sitting__r.Mitigating_Circumstances__c) = "Accepted",
       "Resit " &amp; Text ( Resit_Level__c ),
       "Sit " &amp; Text (  Sit_Level__c )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sitting</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Student_Last_Name__c</fullName>
        <description>For matching against Master file</description>
        <formula>Student__r.LastName&amp;", "&amp;Student__r.FirstName</formula>
        <label>Student Last Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Student_Module_ID__c</fullName>
        <description>Hidden field</description>
        <formula>Student_Module__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Module ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Student_Module_Record_Name__c</fullName>
        <description>Hidden field</description>
        <formula>Student_Module__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Module Record Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Student_Module__c</fullName>
        <label>Student Module</label>
        <referenceTo>Student_Module__c</referenceTo>
        <relationshipLabel>Student Assessments</relationshipLabel>
        <relationshipName>Student_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Student_Record_ID__c</fullName>
        <description>Hidden field</description>
        <formula>Student__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Record ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Student_Record_Name__c</fullName>
        <description>Hidden field</description>
        <formula>Student__r.FirstName &amp;" "&amp; Student__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Record Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Student Applicant, Full Student, Student Pre-Reg</value>
            </filterItems>
            <infoMessage>Contact record needs to have record type of Applicant or Student</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Assessments</relationshipLabel>
        <relationshipName>Student_Assessments</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Test_Record__c</fullName>
        <formula>IF(ISPICKVAL(Student__r.Test_Record__c,"Yes"),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>1st Sitting</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1st Resit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Resit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Resit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Weighted_Score__c</fullName>
        <description>Populated by workflow, so it can be rolled up by RSF</description>
        <inlineHelpText>For Module score, by Weighted %</inlineHelpText>
        <label>Weighted Score</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Weighting__c</fullName>
        <formula>Assessment__r.Weighting_percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This weighting % is taken from the related Assessment template record</inlineHelpText>
        <label>Weighting %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Student Assessment</label><nameField>
        <label>Student Assessment Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Student Assessments</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Inactive__c</columns>
        <columns>Mit_Circ__c</columns>
        <columns>Manual_Score__c</columns>
        <columns>Marker_1__c</columns>
        <columns>Sit_Level__c</columns>
        <columns>Resit_Level__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><recordTypes>
        <fullName>Resit_Allowed</fullName>
        <active>true</active>
        <description>Allows Resit button to show</description>
        <label>Resit Allowed</label>
    </recordTypes><recordTypes>
        <fullName>Resit_Disallowed</fullName>
        <active>true</active>
        <description>Does not allow Resit button</description>
        <label>Resit Disallowed</label>
    </recordTypes><validationRules>
        <fullName>Manual_Mark_Note_required</fullName>
        <active>true</active>
        <description>Manual Mark Notes field required if Manual Mark Reason = Academic Integrity Cat A, B or C, or Other.</description>
        <errorConditionFormula>AND(ISPICKVAL(Manual_Mark_Reason__c,"Other"),ISBLANK(Manual_Mark_Note__c))</errorConditionFormula>
        <errorDisplayField>Manual_Mark_Note__c</errorDisplayField>
        <errorMessage>Please specify a reason for the Manual Mark.</errorMessage>
    </validationRules><validationRules>
        <fullName>Manual_Score_Reasons</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISCHANGED( Manual_Score__c ) ,  ISBLANK( Reason__c ) )</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>Please provide a reason for providing or amending the Manual Score field</errorMessage>
    </validationRules></CustomObject>